--- a/css/modals/video-quality/_video-quality.scss
+++ b/css/modals/video-quality/_video-quality.scss
@@ -142,9 +142,12 @@
     }
 }
 
-#videoResolutionLabel,
 .centeredVideoLabel.moveToCorner {
     z-index: $tooltipsZ;
+}
+
+#videoResolutionLabel {
+    z-index: #{$tooltipsZ + 1};
 }
 
 .centeredVideoLabel {
